# my-little-pdf-py

./: .gitignore  DESIGN_DOCUMENT.md  PHASE_6_2_SUMMARY.md  PHASE_8_SUMMARY.md  PROJECT_STATUS.md  README.md  SOLUCAO_CORES_PDF.md  TASKS.md  check_msys2.ps1  debug_css.py  debug_html.py  demo_document.md  example_templated_markdown.md  markdown_organization.prd.txt  md_to_pdf  pyproject.toml  setup_windows_weasyprint.ps1  test_advanced_headers.py  test_asset_manager.py  test_cli.py  test_cli_enhanced_validation.py  test_comprehensive_css.py  test_corporate.py  test_image_font_assets.py  test_page_processor.py  test_simple_validation.py  test_theme_integration.py  test_validation_system.py
assets/css/: components.css  components_backup.css
docs/: README.md
docs/design/: README.md
docs/planning/: IMPLEMENTATION_PLAN.md  PRD_Phase_3_1_4_PDF_Engine_Integration.md  PRD_Phase_3_Configuration_System.md  PRD_Phase_4_Asset_Management.md  PRD_Phase_5_Advanced_PDF_Features.md  README.md  TASKS.md
docs/progress/: CSS_STYLING_INTEGRATION_SUMMARY.md  PDF_ENGINE_INTEGRATION_SUMMARY.md  README.md  TEMPLATING_INTEGRATION_SUMMARY.md  WEASYPRINT_SUCCESS_SUMMARY.md
docs/setup/: QUICK_START.md  README.md
docs/setup/weasyprint/: README.md  WEASYPRINT_SETUP_PLAN.md  WEASYPRINT_WINDOWS_SETUP.md  install_msys2_manual.md
examples/: README.md  demo_styled_output.py  generate_magic_kingdom_guide.py  generate_magic_kingdom_guide_colorful.py  magic_kingdom_colorful.yaml  magic_kingdom_guide.md  magic_kingdom_theme.yaml  sample.md
markdown_to_pdf_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
schemas/: README.md  theme_schema.json
schemas/examples/: advanced_headers.yaml  corporate.yaml  magic_kingdom.yaml  minimal.yaml
src/md_to_pdf/: __about__.py  __init__.py  base_css.py  cli.py  core.py  css_generator.py  page_processor.py  templating.py
src/md_to_pdf/assets/: __init__.py  exceptions.py  fonts.py  images.py  manager.py  (+1 more)
templates/: attention_box.html  magic_secret.html  tip_box.html
tests/: test_core.py
tests/core/: test_error_handling.py  test_pipeline.py
tests/e2e/: test_end_to_end.py
tests/extensions/: __init__.py  test_custom_blocks.py
tests/integration/: test_css_integration.py  test_templating_integration.py
tests/setup/: __init__.py  test_dependencies.py
tests/templating/: __init__.py  test_templating.py
(+7 files in other folders)
