[project]
name = "markdown-to-pdf-engine"
version = "0.1.0"
description = "A Python-based engine to convert Markdown to PDF with custom styling."
requires-python = ">=3.8"
dependencies = [
    "Markdown",
    "Jinja2",
    "WeasyPrint",
    "PyYAML"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
backend-path = ["."] # Specifies that setuptools should look for setup.py or setup.cfg if needed, common for setuptools

[tool.uv]
# Optional: specify where uv should look for packages, if not PyPI
# index-url = "https://pypi.org/simple"
